--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         <button class="btn btn-primary" onclick="Autos()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 2</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="zoo()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
