--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <button class="btn btn-primary" onclick="zoo()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 3</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="salario()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
