--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <button class="btn btn-primary" onclick="salario()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 4</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="edades()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
