--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <button class="btn btn-primary" onclick="edades()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 5</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="menor()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
