--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <button class="btn btn-primary" onclick="menor()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 6</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="obesidad()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
