--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <button class="btn btn-primary" onclick="obesidad()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 7</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="supermercado()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
