--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <button class="btn btn-primary" onclick="supermercado()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 8</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="teatro()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
