--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         <button class="btn btn-primary" onclick="teatro()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 10</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="candidatos()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
