--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         <button class="btn btn-primary" onclick="candidatos()"> Ejecutar </button>
         <br>
         <br>
+        <h2>Ejercicio 14</h2>
+        <hr>
+        <button class="btn btn-primary" onclick="mcd()"> Ejecutar </button>
+        <br>
+        <br>
     </div>
 </body>
 </html>
